--- a/BeaconCharity/Base.lproj/Main.storyboard
+++ b/BeaconCharity/Base.lproj/Main.storyboard
@@ -271,6 +271,6 @@
         <image name="headerImage" width="1078" height="539"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="i9Q-0S-kgr"/>
+        <segue reference="wMo-QR-mVP"/>
     </inferredMetricsTieBreakers>
 </document>
