--- a/BeaconCharity/Base.lproj/Main.storyboard
+++ b/BeaconCharity/Base.lproj/Main.storyboard
@@ -90,12 +90,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="headerImage" translatesAutoresizingMaskIntoConstraints="NO" id="tUe-y7-FFI">
-                                <rect key="frame" x="16" y="64" width="568" height="180"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="rHp-cx-KCx"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l2c-di-7GL">
                                 <rect key="frame" x="0.0" y="570" width="600" height="30"/>
                                 <state key="normal" title="PayPal で寄付する">
@@ -135,6 +129,12 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="headerImage" translatesAutoresizingMaskIntoConstraints="NO" id="tUe-y7-FFI">
+                                <rect key="frame" x="16" y="64" width="568" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="rHp-cx-KCx"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -159,6 +159,8 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="charityDetailDescTextView" destination="pt0-sb-x8P" id="OUl-Fr-G2s"/>
+                        <outlet property="charityDetailImageView" destination="tUe-y7-FFI" id="fi6-ev-Xcx"/>
                         <outlet property="payNowButton" destination="l2c-di-7GL" id="4S4-DM-eXQ"/>
                         <outlet property="processValueLabel" destination="srp-KW-lQU" id="BB6-cr-OqI"/>
                         <outlet property="progressImageView" destination="lNf-4K-uwg" id="CMh-Xi-ntc"/>
